public/css/news.css
/*.picture {*/
    /*width: 250px;*/

/*}*/
/*body{*/
    /*background-color: #c8c8b2;*/

/*}*/
/*.createNews{*/
    /*float:right;*/
    /*margin:15px 5px 15px;*/
/*}*/
/*.imageOneNews {*/
    /*width: 100%;*/

/*}*/
/*.titleNews{*/
    /*max-width: 20px;*/
/*}*/

*{
    margin: 0;
    padding: 0;
}
body{
    background-color:#3f3e3e;
}
li {
    list-style-type: none; /* Убираем маркеры */
}
a:hover{
    text-decoration: none;
}

.logo>img{
    margin: 20px 0 20px 20px;

}
.colorBlack,header{
    background-color: #3f3e3e;
    width: 100%;
    color: #8c8c8c;
}

.menu>a>div{
    margin-left: 7px;
}
.menu{
    color: #8c8c8c;
}
.menu>a>div{
    padding-left: 10px;
    height: 30px;
    width: 100%;
    background: #f68c06;
}

.menu>a>div>div>li>p{
    color: black;
    margin-left: 5px;
}
.menu>a>div{
    margin-top: 10px;
}
.menu>a>div:hover{
    color: black;
    height: 30px;
    width: 100%;
    background-color: #e8641b;

}
.dropdown-toggle {
    margin-top: 30px;
    background-color: #f68c06;
    border-color: #3F2B22;
    color: #000000;
}
.dropdown-toggle:hover{
    background-color: #e8641b;
    color: black;
}
footer{
    /*position: fixed;*/
    /*!*left: 0; bottom: 0;*!*/
    width: 100%;
}
.foterStile{
    padding: 5px;
}
.anchor{
    margin-left: 0;
}
.contentAndmin{
    background: white;
}
.wrapper{
    min-height:100%

}
.columnLeft{
    background:  #3f3e3e;

}
.createNews{
    margin-top: 30px;
}
.createNews a {
    margin: 10px;
}
.set-main:focus,
.set-main:active,
.set-main:hover{
    text-decoration: none;
    border: 0;
    outline:none !important;
}

.optionBtn{
    width: 100%;
    margin-bottom: 8px;
}

